--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "license": "MIT",
   "devDependencies": {
     "@types/cors": "^2.8.12",
-    "@types/node": "16.11.26",
-    "prisma": "3.12.0",
-    "ts-node": "^10.7.0",
-    "typescript": "4.6.3"
+    "@types/node": "^16.11.26",
+    "prisma": "^3.15.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "dev": "ts-node ./main.ts",
     "devnode": "nodemon --exec npx ts-node ./main.ts"
   },
   "dependencies": {
-    "@prisma/client": "3.12.0",
+    "@prisma/client": "3.13.0",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "body-parser": "^1.20.0",
